--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     <title> Prime-tech - Home</title>
     
     <!--build:css-->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- endbuild -->
@@ -61,7 +61,7 @@
                     <div class="row align-items-center navbar">
                         <div class="col-xl-2 col-lg-2 col-5">
                             <div class="logo-wrapper">
-                                <a href="/"><img src="/img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
+                                <a href="Home.html"><img src="/img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
                             </div>
                         </div>
                         <div class="col-xl-8 col-lg-7 d-none d-lg-block">
