--- a/Policy.html
+++ b/Policy.html
@@ -10,7 +10,7 @@
     <title> Prime-tech - Policy</title>
    
      <!--build:css-->
-   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="main.css">
    <script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <!-- endbuild -->
