--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
                     <div class="row align-items-center navbar">
                         <div class="col-xl-2 col-lg-2 col-5">
                             <div class="logo-wrapper">
-                                <a href="Home.html"><img src="/img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
+                                <a href="Home.html"><img src="img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
                             </div>
                         </div>
                         <div class="col-xl-8 col-lg-7 d-none d-lg-block">
