--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
     <div class="body-overlay"></div>
 
     <!--scrolltop button -->
-    <button class="scrolltop-btn" style="display: inline-block;"><i class="fa-solid fa-angle-up"></i></button>
+    <button class="scrolltop-btn" id="scroll-btn" style="display: inline-block;"><i class="fa-solid fa-angle-up"></i></button>
 
     
     <!--main content wrapper start-->
