--- a/Home.html
+++ b/Home.html
@@ -106,7 +106,7 @@
                             <p class="fw-semibold lead position-relative" style="color: #07DE0A;">PRIME-TECH</p>
                             <h1 class="display-6 fw-semibold text-white mb-3">Road To Financial Freedom</h1>
                             <p class="" style="color: white; font-size: 14px;">Welcome to Prime-tech, your thriving hub for affiliate success! Dive into a world where every small task becomes a rewarding opportunity. At Prime-tech, we've transformed business into prosperity. Our platform buzzes with activity as individuals like you engage in quick and fulfilling tasks that lead to tangible earnings.</p>
-                            <a href="/user-register" class="template-btn primary-btn mt-2">Register</a>
+                            <a href="Register.html" class="template-btn primary-btn mt-2">Register</a>
                         </div>
                 </div>
                     <div class="col-lg-6 col-md-9">
