--- a/Home.html
+++ b/Home.html
@@ -51,13 +51,13 @@
             <nav class="mobile-menu-wrapper mt-15">
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="Terms.html">About Vertexx</a></li>
+                    <li><a href="Terms.html">About Prime-tech/a></li>
                     <li><a href="Buy Coupon Code.html">Buy Coupon</a></li>
                     <li><a href="Top Earners.html">Top Earners</a></li>
                     <li><a href="#">Affiliate Contest</a></li>
                     <li><a href="Verify Coupon Code.html">Verify Coupon</a></li>
-                    <li><a href="#">Vertexx Posts</a></li>
-                    <li><a href="#">Vertexx Freelencing</a></li>
+                    <li><a href="#">Prime-tech Posts</a></li>
+                    <li><a href="#">Prime-tech Freelencing</a></li>
                     <li><a href="Terms.html">Terms</a></li>
                     <li><a href="Policy.html">Policy</a></li>
                     <li><a href="Login.html">Login</a></li>
