--- a/Verify Coupon Code.html
+++ b/Verify Coupon Code.html
@@ -36,8 +36,7 @@
             </div>            
             <nav class="mobile-menu-wrapper mt-15">
                 <ul>
-                    <li><a href="Home.html">Home</a>
-                    </li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="Terms.html">About Prime-tech</a></li>
                     <li><a href="Buy Coupon Code.html">Buy Coupon</a></li>
                     <li><a href="Top Earners.html">Top Earners</a></li>
@@ -47,8 +46,7 @@
                     <li><a href="#">Prime-tech Freelencing</a></li>
                     <li><a href="Terms.html">Terms</a></li>
                     <li><a href="Policy.html">Policy</a></li>
-                    
-                                        <li><a href="Login.html">Login</a></li>
+                    <li><a href="Login.html">Login</a></li>
                     <li><a href="Register.html">Register</a></li>
                 </ul>
             </nav>
@@ -67,7 +65,7 @@
                         <div class="row align-items-center navbar">
                             <div class="col-xl-2 col-lg-2 col-5">
                                 <div class="logo-wrapper">
-                                    <a href="Home.html"><img src="/img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
+                                    <a href="Home.html"><img src="img/logo (3).png" style="height: 60px;" alt="logo" class="logo"></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-7 d-none d-lg-block">
