--- a/Home.html
+++ b/Home.html
@@ -51,7 +51,7 @@
             <nav class="mobile-menu-wrapper mt-15">
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="Terms.html">About Prime-tech/a></li>
+                    <li><a href="Terms.html">About Prime-tech</a></li>
                     <li><a href="Buy Coupon Code.html">Buy Coupon</a></li>
                     <li><a href="Top Earners.html">Top Earners</a></li>
                     <li><a href="#">Affiliate Contest</a></li>
