--- a/Register.html
+++ b/Register.html
@@ -39,7 +39,7 @@ a {text-decoration: none;}
 
   <!-- Back Button -->
   <div class="login-back-button px-3 pt-3" style="cursor: pointer;">
-    <i class="fa-solid fa-arrow-left" onclick="goBack()" style="color: #00361f;"></i>
+    <i class="fa-solid fa-arrow-left" onclick="goBack()" style="color: #fff;"></i>
   </div>
 
   <!-- <div class="alert  alert-dismissible fade <%#= locals.messageStyle %> custom-toast-1 toast-<%#= locals.messageColor %> home-page-toast" role="alert" data-bs-delay="7000" data-bs-autohide="true">
