--- a/Dashboard.html
+++ b/Dashboard.html
@@ -2,11 +2,11 @@
 <html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Vertexx">
+  <meta name="description" content="Prime-tech">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Title -->
-  <title> Vertexx - Dashboard</title>
-  <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">
+  <title> Prime-tech || Dashboard</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
@@ -37,13 +37,13 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                         <span class="badge bg-danger rounded-pill ms-2">New</span>
                     </a>
                 </li>
                 <!-- <li>
                     <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                        <span>Vertexx Game</span>
+                        <span>Prime-tech Game</span>
                     </a>
                 </li> -->
                 <li>
@@ -109,7 +109,7 @@
             <div class="copyright-info">
                 <p>
                     <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Vertexx</a>
+                    ©<a href="Home.html"> Prime-tech</a>
                 </p>
             </div>
         </div>
@@ -128,7 +128,7 @@
                     <a href="Dashboard.html" class="active-item"><i class="fa-solid fa-house"></i><span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                         <span class="badge bg-danger rounded-pill ms-2">New</span>
                     </a>
                 </li>
@@ -195,7 +195,7 @@
             <div class="copyright-info">
                 <p>
                     <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Vertexx</a>
+                    ©<a href="Home.html"> Prime-tech</a>
                 </p>
             </div>
         </div>
@@ -397,7 +397,7 @@
                             <div class="col-12 mb-3">
                                 <div class="primary single-product-card">
                                     <div class="">
-                                        <h5 class="product-title d-block text-truncate">Vertexx Cash</h5>
+                                        <h5 class="product-title d-block text-truncate">Prime-tech Cash</h5>
                                         <p class="sale-price">H20,750.00 </p>
                                     </div>
                                 </div>
@@ -436,30 +436,24 @@
 
     <footer class="shadow dashboard-footer">
         <div class="d-flex py-2 align-items-center justify-content-around bg-two content">
-          <a href="">
+          <a href="Dashboard.html">
             <div class="d-flex flex-column align-items-center">
                 <ion-icon name="home"></ion-icon>
                 <small>Dashboard</small>
             </div>
           </a>
-          <a href="">
+          <a href="Withdrwals history.html">
             <div class="d-flex flex-column align-items-center">
                 <ion-icon name="time-outline"></ion-icon>
                 <small>History</small>
             </div>
           </a>
-          <a href="">
+          <a href="Submit Withdrawal.html">
             <div class="d-flex flex-column align-items-center">
                 <ion-icon name="card-outline"></ion-icon>
                 <small>Withdraw</small>
             </div>
           </a>
-          <!-- <a href="">
-            <div class="d-flex flex-column align-items-center">
-                <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
-                <small>More</small>
-            </div>
-          </a> -->
           <button type="button" class="btn-more" data-toggle="modal" data-target="#slideModal">
             <div class="d-flex flex-column align-items-center">
                 <ion-icon name="ellipsis-horizontal"></ion-icon>
