--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
   
     <!--title-->
     <title> Prime-tech - Home</title>
+    <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
     
     <!--build:css-->
     <link rel="stylesheet" href="main.css">
