--- a/P2P Registration.html
+++ b/P2P Registration.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!-- saved from url=(0029)https://Vertexx.net/user/p2p -->
+<!-- saved from url=(0029)https://Prime-tech.net/user/p2p -->
 <html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Vertexx">
+  <meta name="description" content="Prime-tech">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   
   <!-- Title -->
-  <title> Vertexx - P2P Registration</title>
-  <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">
+  <title> Prime-tech || P2P Registration</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
@@ -32,13 +32,13 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
             <!-- <li>
                 <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                    <span>Vertexx Game</span>
+                    <span>Prime-tech Game</span>
                 </a>
             </li> -->
             <li>
@@ -105,7 +105,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="Home.html"> Vertexx</a>
+                ©<a href="Home.html"> Prime-tech</a>
             </p>
         </div>
     </div>
@@ -125,13 +125,13 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
             <!-- <li>
                 <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                    <span>Vertexx Game</span>
+                    <span>Prime-tech Game</span>
                 </a>
             </li> -->
             <li>
@@ -199,7 +199,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="Home.html"> Vertexx</a>
+                ©<a href="Home.html"> Prime-tech</a>
             </p>
         </div>
     </div>
@@ -330,8 +330,65 @@
       </div>
     </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="slideModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          This is a modal that slides in from the bottom.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="shadow dashboard-footer">
+    <div class="d-flex py-2 align-items-center justify-content-around bg-two content">
+      <a href="Dashboard.html">
+        <div class="d-flex flex-column align-items-center">
+            <ion-icon name="home"></ion-icon>
+            <small>Dashboard</small>
+        </div>
+      </a>
+      <a href="Withdrwals history.html">
+        <div class="d-flex flex-column align-items-center">
+            <ion-icon name="time-outline"></ion-icon>
+            <small>History</small>
+        </div>
+      </a>
+      <a href="Submit Withdrawal.html">
+        <div class="d-flex flex-column align-items-center">
+            <ion-icon name="card-outline"></ion-icon>
+            <small>Withdraw</small>
+        </div>
+      </a>
+      <button type="button" class="btn-more" data-toggle="modal" data-target="#slideModal">
+        <div class="d-flex flex-column align-items-center">
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+            <small>More</small>
+        </div>
+      </button>
+    </div>
+</footer>
+
   
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="script.js"></script>
 
 <script>
