--- a/Policy.html
+++ b/Policy.html
@@ -7,7 +7,8 @@
     <!--meta-->
     
     <!--title-->
-    <title> Prime-tech - Policy</title>
+    <title> Prime-tech || Policy</title>
+    <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
    
      <!--build:css-->
    <link rel="stylesheet" href="main.css">
