--- a/Register.html
+++ b/Register.html
@@ -11,7 +11,8 @@
 
   <!-- Title -->
   <title>Prime-tech || Register </title>
-  
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
+
   <!-- Style CSS -->
   <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
