--- a/Vendors Dashbaord.html
+++ b/Vendors Dashbaord.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!-- saved from url=(0037)https://Vertexx.net/user/vendor/home -->
+<!-- saved from url=(0037)https://Prime-tech .net/user/vendor/home -->
 <html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Vertexx">
+  <meta name="description" content="Prime-tech ">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   
   <!-- Title -->
-  <title> Vertexx - Vendors Dashbaord</title>
-  <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">   
+  <title> Prime-tech || Vendors Dashbaord</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
   
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
@@ -38,7 +38,7 @@
             
 
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
@@ -91,7 +91,7 @@
             <!--<a href="#">-->
             <!--    <i class="fa-brands fa-twitter fs-4"></i>-->
             <!--</a>-->
-            <a href="https://www.tiktok.com/@vertexxofficials?_t=8jIxj7VKUUP&_r=1
+            <a href="https://www.tiktok.com/@Prime-tech officials?_t=8jIxj7VKUUP&_r=1
 ">
                 <i class="fa-brands fa-tiktok fs-4"></i>
             </a>
@@ -107,7 +107,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="/"> Vertexx</a>
+                ©<a href="/"> Prime-tech </a>
             </p>
         </div>
     </div>
@@ -134,7 +134,7 @@
                 <% } %>
             
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
@@ -202,7 +202,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="/"> Vertexx</a>
+                ©<a href="/"> Prime-tech </a>
             </p>
         </div>
     </div>
