--- a/Verify Coupon Result.html
+++ b/Verify Coupon Result.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">
-  <!-- Style CSS -->
+    <title>Prime-tech || Verify coupon code</title>
+    <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
+    <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
