--- a/Withdrwals history.html
+++ b/Withdrwals history.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)https://Vertexx.net/user/withdraw-history -->
+<!-- saved from url=(0042)https://Prime-tech.net/user/withdraw-history -->
 <html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Vertexx">
+  <meta name="description" content="Prime-tech">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <!-- Title -->
-  <title> Vertexx - Withdrwals</title>
-  <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">   
+  <title> Prime-tech || Withdrwals</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
    
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
@@ -31,13 +31,13 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
             <!-- <li>
                 <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                    <span>Vertexx Game</span>
+                    <span>Prime-tech Game</span>
                 </a>
             </li> -->
             <li>
@@ -104,7 +104,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="Home.html"> Vertexx</a>
+                ©<a href="Home.html"> Prime-tech</a>
             </p>
         </div>
     </div>
@@ -124,13 +124,13 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                     <span class="badge bg-danger rounded-pill ms-2">New</span>
                 </a>
             </li>
             <!-- <li>
                 <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                    <span>Vertexx Game</span>
+                    <span>Prime-tech Game</span>
                 </a>
             </li> -->
             <li>
@@ -198,7 +198,7 @@
         <div class="copyright-info">
             <p>
                 <span id="copyrightYear">2024</span>
-                ©<a href="Home.html"> Vertexx</a>
+                ©<a href="Home.html"> Prime-tech</a>
             </p>
         </div>
     </div>
