--- a/Donlines.html
+++ b/Donlines.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!-- saved from url=(0031)https://Vertexx.net/user/team# -->
+<!-- saved from url=(0031)https://Prime-tech.net/user/team# -->
 <html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Vertexx">
+  <meta name="description" content="Prime-tech">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   
   <!-- Title -->
-  <title> Vertexx - Donlines</title>
-  <link rel="shortcut icon" type="image/png" href="img/Vertex-09-copy.png">
+  <title> Prime-tech || Donlines</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="style.css">
@@ -32,13 +32,13 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                         <span class="badge bg-danger rounded-pill ms-2">New</span>
                     </a>
                 </li>
                 <!-- <li>
                     <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                        <span>Vertexx Game</span>
+                        <span>Prime-tech Game</span>
                     </a>
                 </li> -->
                 <li>
@@ -105,7 +105,7 @@
             <div class="copyright-info">
                 <p>
                     <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Vertexx</a>
+                    ©<a href="Home.html"> Prime-tech</a>
                 </p>
             </div>
         </div>
@@ -125,13 +125,13 @@
                 </li>
 
                 <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Vertexx Game</span>
+                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
                         <span class="badge bg-danger rounded-pill ms-2">New</span>
                     </a>
                 </li>
                 <!-- <li>
                     <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                        <span>Vertexx Game</span>
+                        <span>Prime-tech Game</span>
                     </a>
                 </li> -->
                 <li>
@@ -199,7 +199,7 @@
             <div class="copyright-info">
                 <p>
                     <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Vertexx</a>
+                    ©<a href="Home.html"> Prime-tech</a>
                 </p>
             </div>
         </div>
