--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,8 @@
 
   <!-- Title -->
   <title>Prime-tech || Login</title>
-  
+  <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
+
   <!-- Style CSS -->
   <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
