--- a/Terms.html
+++ b/Terms.html
@@ -7,8 +7,9 @@
     <!--meta-->
    
     <!--title-->
-    <title> Prime-tech - Terms</title>
-    
+    <title> Prime-tech || Terms</title>
+    <link rel="shortcut icon" type="image/png" href="img/logo (3).png">
+
     <!--build:css-->
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
