--- a/Set pin.html
+++ b/Set pin.html
@@ -18,192 +18,9 @@
 
 </head>
 
-<body class="bg-one">
-
-    <div id="mySidenav" class="sidenav">
-        
-        <div class="sidenav-wrapper">
-
-            <!-- Sidenav Nav -->
-            <ul class="sidenav-nav ps-0">
-                <li>
-                    <a href="Dashboard.html" class="active-item"><i class="fa-solid fa-house"></i><span>Dashboard</span></a>
-                </li>
-
-                <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
-                        <span class="badge bg-danger rounded-pill ms-2">New</span>
-                    </a>
-                </li>
-                <!-- <li>
-                    <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                        <span>Prime-tech Game</span>
-                    </a>
-                </li> -->
-                <li>
-                    <a href="Withdrwals history.html"><i class="fa-solid fa-bank"></i><span>Withdrawals</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="Upload Porduct.html"><i class="fa-solid fa-cart-shopping"></i><span>Upload Product</span></a>
-                </li>
-                <li>
-                    <a href="Buy Courses.html"><i class="fa-solid fa-graduation-cap"></i><span> Buy Course</span></a>
-                </li>
-                <li>
-                    <a href="Buy Courses.html"><i class="fa-solid fa-graduation-cap"></i><span>Purchased Courses</span></a>
-                </li>
-                <li>
-                    <a href="P2P Registration.html"><i class="fa-solid fa-user-plus"></i><span>P2P Registration</span></a>
-                </li>
-                <li>
-                    <a href="VTU History.html"><i class="fa-solid fa-mobile"></i></i><span>VTU Purchase History</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="Donlines.html"><i class="fa-solid fa-users"></i><span>Downlines</span></a>
-                </li>
-
-                <li>
-                    <a href="#" class="night-mode-nav" onclick="toggleNightMode()">
-                        <i class="fa-solid fa-moon fs-3"></i><span>Night Mode</span>
-                        <div class="form-check form-switch ms-4">
-                            <input class="form-check-input form-check-success" id="darkSwitchMobile" type="checkbox">
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-solid fa-right-from-bracket"></i><span>Logout</span></a>
-                </li>
-            </ul>
-
-            <!-- Social Info -->
-            <div class="social-info-wrap">
-                <a href="#">
-                    <i class="fa-brands fa-facebook fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-telegram fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-twitter fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-tiktok fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-youtube fs-4"></i>
-                </a>
-            </div>
-
-            <!-- Copyright Info -->
-            <div class="copyright-info">
-                <p>
-                    <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Prime-tech</a>
-                </p>
-            </div>
-        </div>
-    </div>
-      
+<body class="bg-one">      
 
   <div class="d-flex">
-
-    <!-- # flex Left -->
-    <div class="offcanvas-body p-0 col-12 col-md-1 shadow">
-        <div class="sidenav-wrapper-lg dark-div">
-
-            <!-- Sidenav Nav -->
-            <ul class="sidenav-nav ps-0">
-                <li>
-                    <a href="Dashboard.html" class="active-item"><i class="fa-solid fa-house"></i><span>Dashboard</span></a>
-                </li>
-
-                <li>
-                    <a href="#"><i class="fa-solid fa-gamepad"></i><span>Prime-tech Game</span>
-                        <span class="badge bg-danger rounded-pill ms-2">New</span>
-                    </a>
-                </li>
-                <!-- <li>
-                    <a href="Contest.html"><i class="fa-solid fa-trophy"></i>
-                        <span>Prime-tech Game</span>
-                    </a>
-                </li> -->
-                <li>
-                    <a href="Withdrwals history.html"><i class="fa-solid fa-bank"></i><span>Withdrawals</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="Upload Porduct.html"><i class="fa-solid fa-cart-shopping"></i><span>Upload Product</span></a>
-                </li>
-                <li>
-                    <a href="Buy Courses.html"><i class="fa-solid fa-graduation-cap"></i><span> Buy Course</span></a>
-                </li>
-                <li>
-                    <a href="Buy Courses.html"><i class="fa-solid fa-graduation-cap"></i><span>Purchased Courses</span></a>
-                </li>
-                <li>
-                    <a href="P2P Registration.html"><i class="fa-solid fa-user-plus"></i><span>P2P Registration</span></a>
-                </li>
-                <li>
-                    <a href="VTU History.html"><i class="fa-solid fa-mobile"></i></i><span>VTU Purchase History</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="Donlines.html"><i class="fa-solid fa-users"></i><span>Downlines</span></a>
-                </li>
-
-                <li>
-                    <a href="#" class="night-mode-nav night-mode-lg" onclick="toggleNightMode()">
-                        <i class="fa-solid fa-moon fs-3"></i><span>Night Mode</span>
-                        <div class="form-check form-switch ms-4">
-                            <input class="form-check-input form-check-success" id="darkSwitchLargeScreen" type="checkbox">
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-solid fa-right-from-bracket"></i><span>Logout</span></a>
-                </li>
-            </ul>
-
-            <!-- Social Info -->
-            <div class="social-info-wrap">
-                <a href="#">
-                    <i class="fa-brands fa-facebook fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-telegram fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-twitter fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-tiktok fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram fs-4"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-youtube fs-4"></i>
-                </a>
-            </div>
-
-
-            <!-- Copyright Info -->
-            <div class="copyright-info">
-                <p>
-                    <span id="copyrightYear">2024</span>
-                    ©<a href="Home.html"> Prime-tech</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <!-- flex left end -->
 
   <div class="flex-right col-12 col-md-11">
     <nav class="navbar px-4 pt-4" id="navbar">
@@ -276,54 +93,61 @@
   </div>
 </div>
   
-  <!-- Modal -->
-  <div class="modal fade" id="slideModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          This is a modal that slides in from the bottom.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<div class="offcanvas offcanvas-bottom bg-one" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasBottomLabel">Set Pin</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class="bottom-nav">
+      <ul>
+        <li class="active-item mb-3">
+          <a href="Vendors Dashbaord.html"><ion-icon name="people-outline"></ion-icon><span>Vendor Dashboard</span></a>
+        </li>
+        <li class="active-item mb-3">
+          <a href="VTU History.html"><ion-icon name="phone-portrait-outline"></ion-icon><span>VTU History</span></a>
+        </li>
+        <li class="active-item mb-3">
+          <a href="P2P Registration.html"><ion-icon name="person-add-outline"></ion-icon><span>P2P Registration</span></a>
+        </li>
+        <li class="active-item mb-3">
+          <a href="Upload Porduct.html"><ion-icon name="cart-outline"></ion-icon><span>Upload Product</span></a>
+        </li>
+        <li class="active-item mb-3">
+          <a href="Donlines.html"><ion-icon name="people-outline"></ion-icon><span>Downlines</span></a>
+        </li>
+      </ul>
     </div>
   </div>
+</div>
 
-  <footer class="shadow dashboard-footer">
-    <div class="d-flex py-2 align-items-center justify-content-around bg-two content">
-      <a href="Dashboard.html">
-        <div class="d-flex flex-column align-items-center">
-            <ion-icon name="home"></ion-icon>
-            <small>Dashboard</small>
-        </div>
-      </a>
-      <a href="Withdrwals history.html">
-        <div class="d-flex flex-column align-items-center">
-            <ion-icon name="time-outline"></ion-icon>
-            <small>History</small>
-        </div>
-      </a>
-      <a href="Submit Withdrawal.html">
-        <div class="d-flex flex-column align-items-center">
-            <ion-icon name="card-outline"></ion-icon>
-            <small>Withdraw</small>
-        </div>
-      </a>
-      <button type="button" class="btn-more" data-toggle="modal" data-target="#slideModal">
-        <div class="d-flex flex-column align-items-center">
-            <ion-icon name="ellipsis-horizontal"></ion-icon>
-            <small>More</small>
-        </div>
-      </button>
-    </div>
+<footer class="shadow dashboard-footer">
+  <div class="d-flex py-2 align-items-center justify-content-around bg-two content">
+    <a href="Dashboard.html">
+      <div class="d-flex flex-column align-items-center">
+          <ion-icon name="home"></ion-icon>
+          <small>Dashboard</small>
+      </div>
+    </a>
+    <a href="Withdrwals history.html">
+      <div class="d-flex flex-column align-items-center">
+          <ion-icon name="time-outline"></ion-icon>
+          <small>History</small>
+      </div>
+    </a>
+    <a href="Submit Withdrawal.html">
+      <div class="d-flex flex-column align-items-center">
+          <ion-icon name="card-outline"></ion-icon>
+          <small>Withdraw</small>
+      </div>
+    </a>
+    <button class="btn-more" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
+      <div class="d-flex flex-column align-items-center">
+          <ion-icon name="ellipsis-horizontal"></ion-icon>
+          <small>More</small>
+      </div>
+    </button>
+  </div>
 </footer>
 
 <script src="script.js"></script>
