--- a/Withdrwals history.html
+++ b/Withdrwals history.html
@@ -49,7 +49,7 @@
             </div>
             
             <div class="container-fluid mt-4">
-                <div class="card-width radius-three shadow bg-gray">
+                <div class="card-width radius-three bg-gray">
                     <div class="card-body p-2">
                         
                       <!-- Single Notification -->
