--- a/Dashboard.html
+++ b/Dashboard.html
@@ -64,7 +64,7 @@
             <div class="col-12 col-md-8">
                 <div class="progress-mobile">
                     <div class="d-flex gap-4 py-5" style="overflow-x: scroll;">
-                      <div class="col-9">
+                      <div class="col-10">
                         <div class="ms-3 bg-gray py-3 shadows radius-three overflow-hidden">
                           <h6 class="text-white px-4">Total Balance</h6><br>
                           <div class="d-flex align-items-center justify-content-between mt-3 mb-1">
@@ -73,9 +73,12 @@
                             </div>
                             <p class="me-3">Affiliate</p>
                           </div>
+                          <p class="color-one me-3 convert">
+                            <i class="fa-solid fa-money-bill-transfer fs-4 color-one"></i> convert
+                          </p>
                         </div>
                       </div>
-                      <div class="col-9">
+                      <div class="col-10">
                         <div class="bg-gray py-3 shadows radius-three overflow-hidden">
                           <h6 class="text-white px-4">Referrals</h6><br>
                           <div class="d-flex align-items-center justify-content-between mt-3 mb-1">
@@ -84,9 +87,12 @@
                             </div>
                             <p class="me-3">Affiliate</p>
                           </div>
+                          <p class="color-one me-3 convert">
+                            <i class="fa-solid fa-users fs-4 color-one"></i> view downlines
+                          </p>
                         </div>
                       </div>
-                      <div class="col-9">
+                      <div class="col-10">
                         <div class="me-3 bg-gray py-3 shadows radius-three overflow-hidden">
                           <h6 class="text-white px-4">Total Withdrawal</h6><br>
                           <div class="d-flex align-items-center justify-content-between mt-3 mb-1">
@@ -95,6 +101,9 @@
                             </div>
                             <p class="me-3">Affiliate</p>
                           </div>
+                          <p class="color-one me-3 convert">
+                            <i class="fa-solid fa-money-bill-transfer fs-4 color-one"></i> convert
+                          </p>
                         </div>
                       </div>
                     </div>
