--- a/Submit Withdrawal.html
+++ b/Submit Withdrawal.html
@@ -45,7 +45,7 @@
             <!-- flex-right inner-left -->
             <div class="container mt-3">
 
-              <div class="card-width bg-gray radius-three">
+              <div class="card-width bg-gray radius-three shadows">
                 <div class="card-body px-4 py-4">
                   <div class="card-text">
                     <p class="text-white fs-4 mb-4">Palmpay | 9034537332 | Jemimah Edem</p>
