--- a/Set pin.html
+++ b/Set pin.html
@@ -79,7 +79,7 @@
                   </div>
 
                   <div class="col-md-12">
-                    <button class="btn btn-color w-100 text-white" type="submit">Update Now</button>
+                    <button class="btn btn-color w-100 text-white radius-two shadow" type="submit">Update Now</button>
                   </div>
 
                 </div>
