--- a/Update Profile.html
+++ b/Update Profile.html
@@ -121,7 +121,7 @@
                     </div>
     
                     <div class="col-md-12">
-                        <button class="btn btn-color w-100 text-white" type="submit">Update Profile</button>
+                        <button class="btn btn-color w-100 text-white radius-two shadow" type="submit">Update Profile</button>
                     </div>
 
                   </div>
