--- a/Update Bank Details.html
+++ b/Update Bank Details.html
@@ -119,7 +119,7 @@
                   </div>
 
                   <div class="col-md-12">
-                    <button class="btn btn-color w-100 text-white radiu-two shadow" type="submit">Update Now</button>
+                    <button class="btn btn-color w-100 text-white radius-two shadow" type="submit">Update Now</button>
                   </div>
 
                 </div>
