--- a/Home.html
+++ b/Home.html
@@ -68,7 +68,7 @@
         </div>
                 
 
-        <section class="hm-affiliate-hero bg-warning-gradient overflow-hidden ptb-80" style="height: auto !important;">
+        <section class="hm-affiliate-hero overflow-hidden ptb-80" style="height: auto !important;">
             <header class="header-style-4 sticky-header" id="header">
                 <div class="container">
                     <div class="row align-items-center navbar">
@@ -109,7 +109,7 @@
                             <p class="" style="color: white; font-size: 14px;">Welcome to Prime-tech, your thriving hub for affiliate success! Dive into a world where every small task becomes a rewarding opportunity. At Prime-tech, we've transformed business into prosperity. Our platform buzzes with activity as individuals like you engage in quick and fulfilling tasks that lead to tangible earnings.</p>
                             <a href="Register.html" class="template-btn primary-btn mt-2">Register</a>
                         </div>
-                </div>
+                    </div>
                     <div class="col-lg-6 col-md-9">
                         <div class="hm-affiliate-hero-right">
                             <img src="img/hero-woman.png" alt="hero shape" class="img-fluid">
