--- a/Buy Coupon Code.html
+++ b/Buy Coupon Code.html
@@ -21,7 +21,7 @@
 <body>
 
     <!--scrolltop button -->
-    <button class="scrolltop-btn" style="display: inline-block;"><i class="fa-solid fa-angle-up"></i></button>
+    <a href="#top"><button class="scrolltop-btn"><i class="fa-solid fa-angle-up"></i></button></a>
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
@@ -54,7 +54,7 @@
 
 
     <header class="sticky-top" id="header">
-        <div class="container">
+        <div class="container" id="top">
             <div class="row align-items-center navbar">
                 <div class="col-xl-2 col-lg-2 col-5">
                     <div class="logo-wrapper">
@@ -77,7 +77,7 @@
                         <div class="ml-20 flex-shrink-0 position-relative d-none d-sm-block">
                             <a href="Login.html" class="btn fw-bold text-dark radius-two btn-small">Login</a>
                         </div>
-                        <button class="mobile-menu-toggle d-block d-lg-none border rounded-circle p-2 bg-white"><i class="fa-solid fa-bars text-dark"></i></button>
+                        <button class="mobile-menu-toggle d-block d-lg-none border rounded-circle p-2 bg-white" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"><i class="fa-solid fa-bars text-dark"></i></button>
                     </div>
                 </div>
             </div>
@@ -195,8 +195,7 @@
 
     <!--build:js-->
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
-
+    <script src="script.js"></script>
     <!--endbuild-->
 
 
