--- a/Top Earners.html
+++ b/Top Earners.html
@@ -21,7 +21,7 @@
 <body aria-hidden="false">
 
     <!--scrolltop button -->
-    <button class="scrolltop-btn" style="display: inline-block;"><i class="fa-solid fa-angle-up"></i></button>
+    <a href="#top"><button class="scrolltop-btn"><i class="fa-solid fa-angle-up"></i></button></a>
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
@@ -54,7 +54,7 @@
 
     
     <header class="sticky-top" id="header">
-        <div class="container">
+        <div class="container" id="top">
             <div class="row align-items-center navbar">
                 <div class="col-xl-2 col-lg-2 col-5">
                     <div class="logo-wrapper">
@@ -200,6 +200,7 @@
    
      <!--build:js-->
      <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+     <script src="script.js"></script>
      <!--endbuild-->
 
 </body>
