--- a/Verify Coupon Code.html
+++ b/Verify Coupon Code.html
@@ -20,7 +20,7 @@
 <body>
  
     <!--scrolltop button -->
-    <button class="scrolltop-btn"><i class="fa-solid fa-angle-up"></i></button>
+    <a href="#top"><button class="scrolltop-btn"><i class="fa-solid fa-angle-up"></i></button></a>
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
@@ -53,7 +53,7 @@
 
     
     <header class="sticky-top" id="header">
-        <div class="container">
+        <div class="container" id="top">
             <div class="row align-items-center navbar">
                 <div class="col-xl-2 col-lg-2 col-5">
                     <div class="logo-wrapper">
@@ -175,6 +175,7 @@
 
      <!--build:js-->
      <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+     <script src="script.js"></script>
      <!--endbuild-->
 
 
